# youtube-automation

./: .gitignore  CLAUDE.md  project-status.json  pyproject.toml
.omc/plans/: checklist-sprint3-pattern-b.md  checklist-sprint4.md  checklist-youtube-automation.md  plan-rendering-engines.md  plan-sprint3-pattern-b.md  plan-youtube-automation.md
config/: .env.example
data/: sample_gdp.csv  sample_kpop.csv
docs/: architecture.md  direction.md  format-spec.md  mvp-spec.md  plan.md  prompt-design.md  research.md  tools-research.md
pipeline/: __init__.py  colors.py  config.py  main.py  monitoring.py  orchestrator.py  schema.py
pipeline/assembly/: ffmpeg_renderer.py
pipeline/audio/: audio_mixer.py  tts_engine.py
pipeline/ideation/: prompt_pool.py  quality_filter.py  script_writer.py
pipeline/publish/: youtube_uploader.py
pipeline/visual/: base_renderer.py  data_viz.py  engine_ai_pipeline.py  engine_manim.py  engine_remotion.py  silent_infographic.py  text_shorts.py  vector_infographic.py  whiteboard.py
